--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
             <div class="row">
                 <div class="col-md-4 col-sm-6 col-xs-12 content">
                     <p class="lead" style="border-bottom: 0.5px solid rgb(202, 202, 202); padding: 2%;">Lorem, ipsum dolor</p>
-                    <img src="img1.png" width="100%">
+                    <img src="img/img1.png" width="100%">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis odit saepe esse quo dolor ipsa
                         quasi veritatis natus, hic eos quidem nam cupiditate doloremque earum laudantium eveniet
                         adipisci assumenda illum?</p>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 content">
                     <p class="lead" style="border-bottom: 0.5px solid rgb(202, 202, 202); padding: 2%;">Lorem, ipsum dolor</p>
-                    <img src="img1.png" width="100%">
+                    <img src="img/img1.png" width="100%">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis odit saepe esse quo dolor ipsa
                         quasi veritatis natus, hic eos quidem nam cupiditate doloremque earum laudantium eveniet
                         adipisci assumenda illum?</p>
                 </div>
                 <div class="col-md-4 col-sm-12 col-xs-12 content">
                     <p class="lead" style="border-bottom: 0.5px solid rgb(202, 202, 202); padding: 2%;">Lorem, ipsum dolor</p>
-                    <img src="img1.png" width="100%">
+                    <img src="img/img1.png" width="100%">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis odit saepe esse quo dolor ipsa
                         quasi veritatis natus, hic eos quidem nam cupiditate doloremque earum laudantium eveniet
                         adipisci assumenda illum?</p>
